--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clear",
+  "name": "myproject",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
+    "@gsap/react": "^2.1.1",
+    "aos": "^2.3.4",
+    "graphql": "^16.9.0",
+    "gsap": "npm:@gsap/shockingly@^3.12.5",
+    "keen-slider": "^6.8.6",
+    "lodash": "^4.17.21",
+    "next": "14.2.9",
+    "next-gravity-forms": "^2.1.3",
+    "next-seo": "^6.6.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.15"
+    "react-lottie": "^1.2.4",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
+    "dotenv": "^16.4.5",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.9",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.15"
+    "webpack": "^5.94.0"
   }
 }
